--- a/Home_credit.ipynb
+++ b/Home_credit.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "application_train=pd.read_csv('C:\\\\Users\\\\yn276\\\\Documents\\\\Yuemin Niu\\\\application_train.csv')"
+    "application_train=pd.read_csv('application_train.csv')"
    ]
   },
   {
