--- a/Home_credit.ipynb
+++ b/Home_credit.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "application_train=pd.read_csv('D:\\\\Study\\\\Cornell\\\\kaggle\\\\Default Credit Risk\\\\application_train.csv')"
+    "application_train=pd.read_csv('application_train.csv')"
    ]
   },
   {
